--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,8 +62,8 @@ jobs:
       - run: |
           julia --project=docs -e '
             using Documenter: doctest
-            using InterpretableCompositionalNetworks
-            doctest(InterpretableCompositionalNetworks)'
+            using CompositionalNetworks
+            doctest(CompositionalNetworks)'
       - run: julia --project=docs docs/make.jl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
