--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "InterpretableCompositionalNetworks"
+name = "CompositionalNetworks"
 uuid = "4b67e4b5-442d-4ef5-b760-3f5df3a57537"
 authors = ["Jean-François Baffier"]
 version = "0.1.0"
