--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-InterpretableCompositionalNetworks = "4b67e4b5-442d-4ef5-b760-3f5df3a57537"
+CompositionalNetworks = "4b67e4b5-442d-4ef5-b760-3f5df3a57537"
