--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "4b67e4b5-442d-4ef5-b760-3f5df3a57537"
 authors = ["Jean-François Baffier"]
 version = "0.0.1"
 
+[deps]
+Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
+
 [compat]
 julia = "1.5"
 
