--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Jean-François Baffier"]
 version = "0.0.3"
 
 [deps]
+ConstraintDomains = "5800fd60-8556-4464-8d61-84ebf7a0bedb"
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
