Update doc settings for stable and dev doc release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,5 +68,6 @@ jobs:
             using CompositionalNetworks
             doctest(CompositionalNetworks)'
       - run: julia --project=docs docs/make.jl
-        env:
+        env:          
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
