--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: CI
 on:
   - push
+  - pull_request
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
@@ -9,8 +10,8 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.5'
-          # - 'nightly'
+          - "^1.6.0-0"
+          - 'nightly'
         os:
           - ubuntu-latest
           - macOS-latest
@@ -56,7 +57,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
         with:
-          version: '1'
+          version: "^1.6.0-0"
       - run: |
           julia --project=docs -e '
             using Pkg
@@ -68,6 +69,6 @@ jobs:
             using CompositionalNetworks
             doctest(CompositionalNetworks)'
       - run: julia --project=docs docs/make.jl
-        env:          
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
