--- a/Project.toml
+++ b/Project.toml
@@ -11,11 +11,11 @@ OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
-ConstraintDomains = "0.1"
+ConstraintDomains = "0.2"
 Dictionaries = "0.3"
-Evolutionary = "0.7, 0.8"
-OrderedCollections = "1.3"
-julia = "1.5, 1.6"
+Evolutionary = "0.8"
+OrderedCollections = "1"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
