--- a/xp/Project.toml
+++ b/xp/Project.toml
@@ -9,6 +9,7 @@ CompositionalNetworks = "4b67e4b5-442d-4ef5-b760-3f5df3a57537"
 ConstraintDomains = "5800fd60-8556-4464-8d61-84ebf7a0bedb"
 Constraints = "30f324ab-b02d-43f0-b619-e131c61659f7"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
@@ -18,5 +19,6 @@ CompositionalNetworks = "0.2"
 ConstraintDomains = "0.2"
 Constraints = "0.2"
 DrWatson = "2"
+JSON = "0.21"
 Tables = "1"
 julia = "1.7"
