Add compat for JuliaFormatter

--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ Unrolled = "9602ed7d-8fef-5bc8-8597-8f21381861e8"
 ConstraintDomains = "0.2"
 Dictionaries = "0.3"
 Evolutionary = "0.10"
+JuliaFormatter = "0.16"
 OrderedCollections = "1"
 ThreadPools = "2"
 Unrolled = "0.1"
