--- a/Project.toml
+++ b/Project.toml
@@ -8,9 +8,11 @@ ConstraintDomains = "5800fd60-8556-4464-8d61-84ebf7a0bedb"
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
+Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ThreadPools = "b189fb0b-2eb5-4ed4-bc0c-d34c51242431"
+ThreadSafeDicts = "4239201d-c60e-5e0a-9702-85d713665ba7"
 Unrolled = "9602ed7d-8fef-5bc8-8597-8f21381861e8"
 
 [compat]
@@ -18,8 +20,10 @@ ConstraintDomains = "0.2"
 Dictionaries = "0.3"
 Evolutionary = "0.10"
 JuliaFormatter = "0.16"
+Memoization = "0.1"
 OrderedCollections = "1"
 ThreadPools = "2"
+ThreadSafeDicts = "0.0.6"
 Unrolled = "0.1"
 julia = "1.6"
 
