Changes to solve affiliation issues

--- a/paper/paper.yml
+++ b/paper/paper.yml
@@ -17,7 +17,7 @@ authors:
     affiliation: 2
   - name: Florian \textsc{Richoux}
     orcid: 0000-0003-4693-379X
-    affiliation: 3,4
+    affiliation: "3,4"
   - name: Pedro \textsc{Patinho}
     orcid: 0000-0001-7906-6114
     affiliation: 2
