--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.3.0"
 [deps]
 ConstraintDomains = "5800fd60-8556-4464-8d61-84ebf7a0bedb"
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
@@ -16,7 +17,7 @@ ThreadSafeDicts = "4239201d-c60e-5e0a-9702-85d713665ba7"
 Unrolled = "9602ed7d-8fef-5bc8-8597-8f21381861e8"
 
 [compat]
-ConstraintDomains = "0.2"
+ConstraintDomains = "0.3"
 Dictionaries = "0.3"
 Evolutionary = "0.10"
 JuliaFormatter = "0.16"
