--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "CompositionalNetworks"
 uuid = "4b67e4b5-442d-4ef5-b760-3f5df3a57537"
 authors = ["Jean-François Baffier"]
-version = "0.3.2"
+version = "0.3.3"
 
 [deps]
 ConstraintDomains = "5800fd60-8556-4464-8d61-84ebf7a0bedb"
@@ -17,15 +17,15 @@ ThreadSafeDicts = "4239201d-c60e-5e0a-9702-85d713665ba7"
 Unrolled = "9602ed7d-8fef-5bc8-8597-8f21381861e8"
 
 [compat]
-ConstraintDomains = "0.3"
+ConstraintDomains = "0.3.1"
 Dictionaries = "0.3"
 Distances = "0.10"
 Evolutionary = "0.11"
-JuliaFormatter = "0.22"
+JuliaFormatter = "0.22, 1"
 Memoization = "0.1"
 OrderedCollections = "1"
 ThreadPools = "2"
-ThreadSafeDicts = "0.0.6"
+ThreadSafeDicts = "0.1"
 Unrolled = "0.1"
 julia = "1.6"
 
