--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,10 @@
 name = "CompositionalNetworks"
 uuid = "4b67e4b5-442d-4ef5-b760-3f5df3a57537"
 authors = ["Jean-François Baffier"]
-version = "0.5.1"
+version = "0.5.2"
 
 [deps]
+ConstraintCommons = "e37357d9-0691-492f-a822-e5ea6a920954"
 ConstraintDomains = "5800fd60-8556-4464-8d61-84ebf7a0bedb"
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
@@ -14,6 +15,7 @@ ThreadSafeDicts = "4239201d-c60e-5e0a-9702-85d713665ba7"
 Unrolled = "9602ed7d-8fef-5bc8-8597-8f21381861e8"
 
 [compat]
+ConstraintCommons = "0.1"
 ConstraintDomains = "0.3"
 Dictionaries = "0.3"
 Distances = "0.10"
