--- a/test/Project.toml
+++ b/test/Project.toml
@@ -5,4 +5,6 @@ Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
+TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 ThreadPools = "b189fb0b-2eb5-4ed4-bc0c-d34c51242431"
