--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "CompositionalNetworks"
 uuid = "4b67e4b5-442d-4ef5-b760-3f5df3a57537"
 authors = ["Jean-François Baffier"]
-version = "0.5.5"
+version = "0.5.6"
 
 [deps]
 ConstraintCommons = "e37357d9-0691-492f-a822-e5ea6a920954"
@@ -21,8 +21,9 @@ ConstraintCommons = "0.2"
 ConstraintDomains = "0.3"
 Dictionaries = "0.4"
 Distances = "0.10"
-JuliaFormatter = "0.22, 1"
+JuliaFormatter = "1"
 OrderedCollections = "1"
+Random = "1"
 TestItemRunner = "0.2"
 TestItems = "0.1"
 ThreadSafeDicts = "0.1"
@@ -30,7 +31,11 @@ Unrolled = "0.1"
 julia = "1.8"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
+Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+ThreadPools = "b189fb0b-2eb5-4ed4-bc0c-d34c51242431"
 
 [targets]
-test = ["Test"]
+test = ["Aqua", "Evolutionary", "Memoization", "Test", "ThreadPools"]
