--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ JuliaFormatter = "1"
 OrderedCollections = "1"
 Random = "1"
 TestItemRunner = "0.2"
-TestItems = "0.1"
+TestItems = "0.1, 1"
 ThreadSafeDicts = "0.1"
 Unrolled = "0.1"
 julia = "1.8"
