CompatHelper: bump compat for TestItemRunner to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ Distances = "0.10"
 JuliaFormatter = "1"
 OrderedCollections = "1"
 Random = "1"
-TestItemRunner = "0.2"
+TestItemRunner = "0.2, 1"
 TestItems = "0.1"
 ThreadSafeDicts = "0.1"
 Unrolled = "0.1"
