--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "CompositionalNetworks"
 uuid = "4b67e4b5-442d-4ef5-b760-3f5df3a57537"
 authors = ["Jean-François Baffier"]
-version = "0.5.7"
+version = "0.5.8"
 
 [deps]
 ConstraintCommons = "e37357d9-0691-492f-a822-e5ea6a920954"
@@ -11,7 +11,6 @@ Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 ThreadSafeDicts = "4239201d-c60e-5e0a-9702-85d713665ba7"
 Unrolled = "9602ed7d-8fef-5bc8-8597-8f21381861e8"
@@ -24,8 +23,8 @@ Distances = "0.10"
 JuliaFormatter = "1"
 OrderedCollections = "1"
 Random = "1"
-TestItemRunner = "0.2"
-TestItems = "0.1"
+TestItemRunner = "0.2, 1"
+TestItems = "0.1, 1"
 ThreadSafeDicts = "0.1"
 Unrolled = "0.1"
 julia = "1.8"
@@ -35,7 +34,8 @@ Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 ThreadPools = "b189fb0b-2eb5-4ed4-bc0c-d34c51242431"
 
 [targets]
-test = ["Aqua", "Evolutionary", "Memoization", "Test", "ThreadPools"]
+test = ["Aqua", "Evolutionary", "Memoization", "Test", "TestItemRunner", "ThreadPools"]
