--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,9 @@ jobs:
       fail-fast: false
       matrix:
         version:
+          - "lts" # automatically expands to the latest LTS release of Julia
           - "1" # automatically expands to the latest stable 1.x release of Julia
-          - "pre"
+          - "pre" # automatically expands to the latest pre-release of Julia
         os:
           - ubuntu-latest
         arch:
