--- a/Project.toml
+++ b/Project.toml
@@ -22,7 +22,7 @@ Distances = "0.10"
 JuliaFormatter = "1"
 OrderedCollections = "1"
 Random = "1"
-TestItems = "0.1, 1"
+TestItems = "1"
 Unrolled = "0.1"
 julia = "1.10"
 
