CompatHelper: bump compat for JuliaFormatter to 2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ ConstraintCommons = "0.2"
 ConstraintDomains = "0.3"
 Dictionaries = "0.4"
 Distances = "0.10"
-JuliaFormatter = "1"
+JuliaFormatter = "1, 2"
 OrderedCollections = "1"
 Random = "1"
 TestItems = "1"
