--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,14 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 Unrolled = "9602ed7d-8fef-5bc8-8597-8f21381861e8"
 
+[weakdeps]
+Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
+
+[extensions]
+GeneticExt = "Evolutionary"
+
 [compat]
+Evolutionary = "0.11"
 ConstraintCommons = "0.2"
 ConstraintDomains = "0.3"
 Dictionaries = "0.4"
