--- a/Project.toml
+++ b/Project.toml
@@ -18,14 +18,23 @@ Unrolled = "9602ed7d-8fef-5bc8-8597-8f21381861e8"
 [weakdeps]
 Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
 LocalSearchSolvers = "2b10edaa-728d-4283-ac71-07e312d6ccf3"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+Juniper = "2ddba703-00a4-53a7-87a5-e8b9971dde84"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 
 [extensions]
 GeneticExt = "Evolutionary"
 LocalSearchSolversExt = "LocalSearchSolvers"
+JuMPExt = ["JuMP", "Juniper", "Ipopt", "Gurobi"]
 
 [compat]
 LocalSearchSolvers = "0.4"
 Evolutionary = "0.11"
+JuMP = "1"
+Juniper = "0.9"
+Ipopt = "1"
+Gurobi = "1.7"
 ConstraintCommons = "0.2"
 ConstraintDomains = "0.3"
 Dictionaries = "0.4"
@@ -42,6 +51,10 @@ julia = "1.10"
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
 LocalSearchSolvers = "2b10edaa-728d-4283-ac71-07e312d6ccf3"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+Juniper = "2ddba703-00a4-53a7-87a5-e8b9971dde84"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 ExplicitImports = "7d51a73a-1435-4ff3-83d9-f097790105c7"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
@@ -50,4 +63,14 @@ TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 ThreadPools = "b189fb0b-2eb5-4ed4-bc0c-d34c51242431"
 
 [targets]
-test = ["Aqua", "ExplicitImports", "JET", "Evolutionary", "LocalSearchSolvers", "Memoization", "Test", "TestItemRunner", "ThreadPools"]
+test = [
+    "Aqua",
+    "ExplicitImports",
+    "JET",
+    "Evolutionary",
+    "LocalSearchSolvers",
+    "Memoization",
+    "Test",
+    "TestItemRunner",
+    "ThreadPools",
+]
