--- a/Project.toml
+++ b/Project.toml
@@ -35,8 +35,8 @@ JuMP = "1"
 Juniper = "0.9"
 Ipopt = "1"
 Gurobi = "1.7"
-ConstraintCommons = "0.2"
-ConstraintDomains = "0.3"
+ConstraintCommons = "0.2, 0.3"
+ConstraintDomains = "0.3, 0.4"
 Dictionaries = "0.4"
 Distances = "0.10"
 ExproniconLite = "0.10.13"
