--- a/Project.toml
+++ b/Project.toml
@@ -50,7 +50,7 @@ julia = "1.10"
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
-# LocalSearchSolvers = "2b10edaa-728d-4283-ac71-07e312d6ccf3"
+LocalSearchSolvers = "2b10edaa-728d-4283-ac71-07e312d6ccf3"
 # JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 # Juniper = "2ddba703-00a4-53a7-87a5-e8b9971dde84"
 # Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
