--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ Unrolled = "9602ed7d-8fef-5bc8-8597-8f21381861e8"
 
 [weakdeps]
 Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
-# LocalSearchSolvers = "2b10edaa-728d-4283-ac71-07e312d6ccf3"
+LocalSearchSolvers = "2b10edaa-728d-4283-ac71-07e312d6ccf3"
 # JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 # Juniper = "2ddba703-00a4-53a7-87a5-e8b9971dde84"
 # Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
@@ -25,7 +25,7 @@ Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
 
 [extensions]
 GeneticExt = "Evolutionary"
-# LocalSearchSolversExt = "LocalSearchSolvers"
+LocalSearchSolversExt = "LocalSearchSolvers"
 # JuMPExt = ["JuMP", "Juniper", "Ipopt", "Gurobi"]
 
 [compat]
@@ -35,12 +35,12 @@ Evolutionary = "0.11"
 # Juniper = "0.9"
 # Ipopt = "1"
 # Gurobi = "1.7"
-ConstraintCommons = "0.2, 0.3"
-ConstraintDomains = "0.3, 0.4"
+ConstraintCommons = "0.3"
+ConstraintDomains = "0.4"
 Dictionaries = "0.4"
 Distances = "0.10"
-ExproniconLite = "0.10.13"
-JuliaFormatter = "1, 2"
+ExproniconLite = "0.10"
+JuliaFormatter = "2"
 OrderedCollections = "1"
 Random = "1"
 TestItems = "1"
@@ -68,7 +68,7 @@ test = [
     "ExplicitImports",
     "JET",
     "Evolutionary",
-    # "LocalSearchSolvers",
+    "LocalSearchSolvers",
     "Memoization",
     "Test",
     "TestItemRunner",
