--- a/Project.toml
+++ b/Project.toml
@@ -18,14 +18,17 @@ Unrolled = "9602ed7d-8fef-5bc8-8597-8f21381861e8"
 [weakdeps]
 Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
 LocalSearchSolvers = "2b10edaa-728d-4283-ac71-07e312d6ccf3"
+Metaheuristics = "bcdb8e00-2c21-11e9-3065-2b553b22f898"
 
 [extensions]
 GeneticExt = "Evolutionary"
 LocalSearchSolversExt = "LocalSearchSolvers"
+MetaheuristicsExt = "Metaheuristics"
 
 [compat]
 LocalSearchSolvers = "0.4"
 Evolutionary = "0.11"
+Metaheuristics = "3"
 ConstraintCommons = "0.3"
 ConstraintDomains = "0.4"
 Dictionaries = "0.4"
@@ -42,6 +45,7 @@ julia = "1.10"
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Evolutionary = "86b6b26d-c046-49b6-aa0b-5f0f74682bd6"
 LocalSearchSolvers = "2b10edaa-728d-4283-ac71-07e312d6ccf3"
+Metaheuristics = "bcdb8e00-2c21-11e9-3065-2b553b22f898"
 ExplicitImports = "7d51a73a-1435-4ff3-83d9-f097790105c7"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
@@ -57,6 +61,7 @@ test = [
     "Evolutionary",
     "LocalSearchSolvers",
     "Memoization",
+    "Metaheuristics",
     "Test",
     "TestItemRunner",
     "ThreadPools",
